[gd_scene load_steps=2 format=3 uid="uid://dcbu277ipnbsh"]

[ext_resource type="Script" path="res://assets/scripts/UI.gd" id="1"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="StrokeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Strokes: 0"

[node name="LevelNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level: Default"

[node name="MessageLabel" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Restart Game"

[node name="GameControls" type="HBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -262.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_constants/separation = 10
alignment = 2

[node name="RestartButton" type="Button" parent="GameControls"]
layout_mode = 2
size_flags_vertical = 4
text = "Restart"

[node name="EditButton" type="Button" parent="GameControls"]
layout_mode = 2
size_flags_vertical = 4
text = "Edit Level"

[node name="MenuButton" type="Button" parent="GameControls"]
layout_mode = 2
size_flags_vertical = 4
text = "Menu"

[node name="MessagePanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="WinMessageLabel" type="Label" parent="MessagePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Victory!
Strokes: 0

Press Restart to play again"
horizontal_alignment = 1
vertical_alignment = 1
